# src_lister

./: .gitignore  README.md  pyproject.toml  requirement.txt  setup.py
.github/workflows/: python-app.yml
examples/: README.md  src.yml
examples/adder/: .gitignore  Makefile  README.md  lint_verilator.sh  run_verilator.sh
examples/adder/rtl/Nbits_adder/: nbits_adder.sv  nbits_adder.yml
examples/adder/rtl/full_adder/: full_adder.sv  full_adder.yml
examples/adder/rtl/half_adder/: half_adder.sv  half_adder.yml
examples/adder/rtl/new_Nbits_adder/: nbits_adder.sv  new_nbits_adder.yml
examples/adder/rtl/top/: top.sv  top.yml
examples/adder/templates/: lint_verilator.txt  run_verilator.txt
examples/adder/verif/: adder_tb.sv  adder_tb.yml
examples/etc/: etc.yml
examples/other/: other.yml
sources/: main.py
sources/YAML_extractor/: YAML_extractor.py
sources/default_cfg/: config.yml
src/default_output/: verilator.sh
src/files_lister/: main.py
src/files_lister/default_cfg/: config.yml
src/files_lister/template_utils/: __init__.py
src/files_lister/template_utils/extractor/: __init__.py  get_all_params.py  get_all_values.py
src/files_lister/template_utils/generator/: fill_template.py  gen_pattern.py
src/files_lister/yaml_utils/: __init__.py
src/files_lister/yaml_utils/extractor/: __init__.py  get_deps.py  get_files.py
tests/: README.md  __init__.py
tests/get_all_params/: README.md  test_get_all_params.py
tests/get_all_params/datas/: good_keys.txt  results.py
